fixed alignment of gtid for q2

--- a/hw2/Q2/graph.css
+++ b/hw2/Q2/graph.css
@@ -18,5 +18,6 @@ pointer-events: none;
 }
 
 body {
+    width: 900px;
     text-align: right;
 }
